deployments/apps/sharkey/01-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: sharkey
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: 'postgres:14'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
          resources:
            limits: 
              cpu: '500m'
              memory: '1Gi'
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: sharkey
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
