deployments/apps/sharkey/02-sharkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharkey
  namespace: sharkey
spec:
  selector:
    matchLabels:
      app: sharkey
  template:
    metadata:
      labels:
        app: sharkey
    spec:
      volumes:
        - name: sharkey-data
          persistentVolumeClaim:
            claimName: sharkey-volume-claim
        - name: sharkey-config
          configMap:
            name: sharkey-config
      containers:
      - name: sharkey
        image: registry.insertdomain.name/sharkey:latest
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: '3000m'
            memory: '2Gi'
          requests:
            cpu: '500m'
            memory: '500Mi'
        volumeMounts:
        - mountPath: "/sharkey/.config"
          name: sharkey-config
        - mountPath: "/sharkey/files"
          name: sharkey-data
---
apiVersion: v1
kind: Service
metadata:
  name: sharkey-svc
  namespace: sharkey
spec:
  selector:
    app: sharkey
  ports:
  - port: 80
    targetPort: 3000
